Timestamp on mobile fix

--- a/src/app/player/player.component.less
+++ b/src/app/player/player.component.less
@@ -52,11 +52,17 @@
             .font-manrope;
             color: white;
             display: block;
-            font-weight: bold;
-            font-size: 16px;
             line-height: 16px;
             text-shadow: 0px 0px 6px #000000;
             height: 0px;
+            .desktop({
+                font-weight: bold;
+                font-size: 16px;    
+            });
+            .mobile({
+                font-weight: 400;
+                font-size: 12px;    
+            });
         }
     }
 }
